--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -18,7 +18,7 @@
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:600,800">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
             <link rel="stylesheet" type="text/css" href="https://www.hcpss.org/f/mrb/newdesign/main.min.css">
-        	<link rel="stylesheet" href="{{ asset('css/main.min.css') }}">
+        	<link rel="stylesheet" href="/css/main.min.css">
         {% endblock %}
     </head>
     <body>
